samples/_failures_safe/1761593150_5cd4b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2998d51f.c: In function ‘main’:
./samples/SAFE/__tmp_2998d51f.c:179: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_2998d51f.c:178:9: error: expected declaration or statement at end of input
  178 |         if
      |         ^~
./samples/SAFE/__tmp_2998d51f.c:178:9: error: expected declaration or statement at end of input
